--- a/UNet_WithBoundryLoss.ipynb
+++ b/UNet_WithBoundryLoss.ipynb
@@ -548,20 +548,19 @@
     "            val_labels_convert = [post_label(val_label_tensor) for val_label_tensor in val_labels_list]\n",
     "            val_outputs_list = decollate_batch(val_outputs)\n",
     "            val_output_convert = [post_pred(val_pred_tensor) for val_pred_tensor in val_outputs_list]\n",
+    "            \n",
+    "            \n",
     "            loss = loss_function(val_outputs, val_labels).item()\n",
-    "            \n",
-    "            val_out_convert = torch.stack(val_labels_convert)\n",
-    "                        \n",
-    "            \n",
+    "            val_output_convert = torch.stack(val_output_convert)\n",
     "            val_labels_convert = torch.stack(val_labels_convert)\n",
-    "            boundry_loss = bd_loss(val_output_convert,val_labels_convert)\n",
+    "            boundry_loss = bd_loss(val_output_convert, val_labels_convert)\n",
     "            loss += 0.5 * boundry_loss.item()\n",
     "\n",
     "            validation_loss.append(loss.item())\n",
     "            dice_metric(y_pred=val_output_convert, y=val_labels_convert)\n",
     "            del val_output_convert, val_labels_convert, val_outputs\n",
     "#             epoch_iterator_val.set_description(f\"Validate (loss={loss.item():2.5f})\")\n",
-    "            epoch_iterator_val.set_description(f\"Validate (loss={loss:2.5f}) (boundry_loss={0.5 * boundry_loss.item():2.5f})\")\n",
+    "             epoch_iterator_val.set_description(f\"Validate (loss={loss:2.5f}) (boundry_loss={0.5 * boundry_loss.item():2.5f})\")\n",
     "#             break\n",
     "            break\n",
     "        mean_dice_val = dice_metric.aggregate().item()\n",
