add training changes

--- a/UNet_WithBoundryLoss.ipynb
+++ b/UNet_WithBoundryLoss.ipynb
@@ -576,6 +576,10 @@
     "    return mean_dice_val, mean_hausdorff, validation_loss_mean\n",
     "\n",
     "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
     "def train(global_step, train_loader, dice_val_best, global_step_best):\n",
     "    model.train()\n",
     "    model.to(device)\n",
@@ -592,8 +596,15 @@
     "        with torch.cuda.amp.autocast():\n",
     "            logit_map = model(x)\n",
     "            loss = loss_function(logit_map, y)\n",
+    "\n",
+    "\n",
     "        scaler.scale(loss).backward()\n",
-    "        epoch_loss += loss.item()\n",
+    "        y_one_hot = [post_label(y_tensor) for y_tensor in y]\n",
+    "        y_one_hot = torch.stack(y_one_hot)\n",
+    "        boundry_loss = bd_loss(logit_map, y)\n",
+    "        epoch_loss += loss.item() + 0.5 * boundry_loss.item()\n",
+    "\n",
+    "\n",
     "        if torch.isnan(loss):\n",
     "            print(torch.max(x), torch.min(x))\n",
     "            \n",
@@ -604,7 +615,8 @@
     "        scaler.update()\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        epoch_iterator.set_description(f\"Training ({global_step} / {max_iterations} Steps) (loss={loss.item():2.5f})\")\n",
+    "        # epoch_iterator.set_description(f\"Training ({global_step} / {max_iterations} Steps) (loss={loss.item():2.5f})\")\n",
+    "        epoch_iterator.set_description(f\"Training ({global_step} / {max_iterations} Steps) (loss={loss.item() + (0.5 * boundry_loss.item()):2.5f}) (boundry_loss={0.5 * boundry_loss.item():2.5f})\")\n",
     "        global_step += 1\n",
     "        break\n",
     "       \n",
