--- a/UNet_WithBoundryLoss.ipynb
+++ b/UNet_WithBoundryLoss.ipynb
@@ -386,7 +386,7 @@
     "    cache_dir='train_unet'\n",
     ")\n",
     "\n",
-    "train_loader = DataLoader(train_ds, batch_size=1, shuffle=True,\n",
+    "train_loader = ThreadDataLoader(train_ds, batch_size=1, shuffle=True,\n",
     "                                collate_fn=lambda x: pad_list_data_collate(x, pad_to_shape=(96, 96, 96))\n",
     "                               )"
    ]
@@ -405,7 +405,7 @@
     "#     cache_dir='C:/Training/val'\n",
     ")\n",
     "\n",
-    "val_loader = DataLoader(val_ds, batch_size=1, \n",
+    "val_loader = ThreadDataLoader(val_ds, batch_size=1, \n",
     "                              collate_fn=lambda x: pad_list_data_collate(x, pad_to_shape=(96, 96, 96)))"
    ]
   },
@@ -618,7 +618,7 @@
     "        # epoch_iterator.set_description(f\"Training ({global_step} / {max_iterations} Steps) (loss={loss.item():2.5f})\")\n",
     "        epoch_iterator.set_description(f\"Training ({global_step} / {max_iterations} Steps) (loss={loss.item() + (0.5 * boundry_loss.item()):2.5f}) (boundry_loss={0.5 * boundry_loss.item():2.5f})\")\n",
     "        global_step += 1\n",
-    "        break\n",
+    "#         break\n",
     "       \n",
     "\n",
     "    epoch_loss /= step\n",
@@ -635,8 +635,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training (0 / 90000 Steps) (loss=3.62576):   0%|                                                                                                                                                   | 0/357 [00:02<?, ?it/s]\n",
-      "Validate (loss=3.42948) (boundry_loss=0.07518):  17%|██████████████████████▌                                                                                                                | 4/24 [01:36<08:38, 25.91s/it]"
+      "Training (356 / 90000 Steps) (loss=1.94920) (boundry_loss=0.07134): 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 357/357 [23:04<00:00,  3.88s/it]\n",
+      "Validate (loss=1.31291) (boundry_loss=0.13721): 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 24/24 [14:52<00:00, 37.18s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Hausdorff disatnce: 0\n",
+      "Model Was Saved ! Current Best Avg. Dice: 0.16893436014652252 Current Avg. Dice: 0.16893436014652252\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training (713 / 90000 Steps) (loss=1.31219) (boundry_loss=0.05577): 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 357/357 [22:53<00:00,  3.85s/it]\n",
+      "Validate (loss=1.20002) (boundry_loss=0.18359): 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 24/24 [14:54<00:00, 37.28s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Hausdorff disatnce: 0\n",
+      "Model Was Saved ! Current Best Avg. Dice: 0.24149449169635773 Current Avg. Dice: 0.24149449169635773\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training (973 / 90000 Steps) (loss=1.21570) (boundry_loss=0.05062):  73%|█████████████████████████████████████████████████████████████████████████████████▌                              | 260/357 [16:17<05:51,  3.63s/it]"
      ]
     }
    ],
