save test results

--- a/UNet_WithBoundryLoss.ipynb
+++ b/UNet_WithBoundryLoss.ipynb
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "id": "7d7a5434",
    "metadata": {},
    "outputs": [
@@ -2044,19 +2044,21 @@
        ")"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model_name =  os.path.join(root_dir, \"best_metric_model_with_boundry_loss.pth\")\n",
+    "\n",
     "model.load_state_dict(torch.load(model_name))\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "id": "9ab8e496",
    "metadata": {},
    "outputs": [
@@ -2096,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "id": "1880389c",
    "metadata": {},
    "outputs": [],
@@ -2115,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "id": "1d179da0",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2139,7 @@
     "            test_loss.append(loss.item())\n",
     "            dice_metric(y_pred=test_output_convert, y=test_labels_convert)\n",
     "            epoch_iterator_test.set_description(f\"Test (loss={loss.item():2.5f})\")\n",
-    "        mean_dice_test = dice_metric.aggregate().item()\n",
+    "        mean_dice_test = dice_metric.aggregate()\n",
     "        dice_metric.reset()\n",
     "\n",
     "        test_loss_mean = np.nanmean(np.nan_to_num(np.array(test_loss),\n",
@@ -2147,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "id": "c6863d31",
    "metadata": {},
    "outputs": [
@@ -2155,18 +2157,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test (loss=0.17631): 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25/25 [05:42<00:00, 13.70s/it]\n"
+      "Test (loss=0.17631): 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25/25 [05:39<00:00, 13.56s/it]\n"
      ]
     }
    ],
    "source": [
+    "post_label = AsDiscrete(to_onehot=11)\n",
+    "post_pred = AsDiscrete(argmax=True, to_onehot=11)\n",
+    "dice_metric = DiceMetric(include_background=True, reduction='none', get_not_nans=False)\n",
     "epoch_iterator_test = tqdm(test_loader, desc=\"Test\", dynamic_ncols=True)\n",
     "dice_test, loss_test = test(epoch_iterator_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "id": "37de7a59",
    "metadata": {},
    "outputs": [
@@ -2174,7 +2179,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test: (loss=0.18488451987504959) (dice=0.9018808007240295)\n"
+      "Test: (loss=0.18488451987504959) (dice=tensor([[0.9940, 0.9003, 0.8250, 0.9213, 0.9476, 0.8459, 0.9588, 0.8375, 0.9554,\n",
+      "         0.9464, 0.9069],\n",
+      "        [0.9971, 0.8820, 0.9131, 0.9307, 0.9664, 0.9115, 0.9798, 0.9009, 0.9685,\n",
+      "         0.9699, 0.9532],\n",
+      "        [0.9981, 0.8956, 0.8351, 0.9112, 0.9652, 0.8551, 0.9740, 0.8690, 0.9396,\n",
+      "         0.9481, 0.9396],\n",
+      "        [0.9818, 0.8657, 0.7841, 0.7847, 0.9595, 0.8745, 0.9450, 0.8296, 0.9698,\n",
+      "         0.9485, 0.8753],\n",
+      "        [0.9976, 0.9149, 0.9052, 0.9126, 0.9200, 0.9048, 0.9187, 0.8862, 0.9595,\n",
+      "         0.9608, 0.9198],\n",
+      "        [0.9988, 0.9209, 0.9078,    nan, 0.9767,    nan, 0.9531,    nan, 0.7100,\n",
+      "            nan, 0.6838],\n",
+      "        [0.9964, 0.9191, 0.8920, 0.8715, 0.9443, 0.8594, 0.9157, 0.7621, 0.9368,\n",
+      "         0.9274, 0.8617],\n",
+      "        [0.9970, 0.8991, 0.8885, 0.9251, 0.9496, 0.9329, 0.9708, 0.8966, 0.9365,\n",
+      "         0.9484, 0.9409],\n",
+      "        [0.9942, 0.8671, 0.8908, 0.9079, 0.9344, 0.9237, 0.9585, 0.8255, 0.9535,\n",
+      "         0.9693, 0.9304],\n",
+      "        [0.9978, 0.9075, 0.9047, 0.9384, 0.9676, 0.9133, 0.9701, 0.9186, 0.9758,\n",
+      "         0.9657, 0.9428],\n",
+      "        [0.9981, 0.9278, 0.9072,    nan, 0.8422,    nan, 0.9547,    nan, 0.2943,\n",
+      "         0.0276, 0.8894],\n",
+      "        [0.9968, 0.9075, 0.8135, 0.9085, 0.9641, 0.8905, 0.9241, 0.8959, 0.9645,\n",
+      "         0.8799, 0.4796],\n",
+      "        [0.9987, 0.9088, 0.8670,    nan, 0.9016,    nan, 0.9338,    nan, 0.4404,\n",
+      "            nan, 0.5758],\n",
+      "        [0.9892, 0.8848, 0.7901, 0.8845, 0.9775, 0.9050, 0.9587, 0.8610, 0.9684,\n",
+      "         0.9720, 0.9110],\n",
+      "        [0.9958, 0.9311, 0.9077, 0.9038, 0.9243, 0.9290, 0.8010, 0.8937, 0.9543,\n",
+      "         0.9500, 0.9258],\n",
+      "        [0.9945, 0.9231, 0.9059, 0.9356, 0.9738, 0.9008, 0.9763, 0.9281, 0.9758,\n",
+      "         0.9661, 0.9407],\n",
+      "        [0.9974, 0.9204, 0.8963, 0.9021, 0.9058, 0.8747, 0.9087, 0.9037, 0.9352,\n",
+      "         0.8804, 0.8685],\n",
+      "        [0.9963, 0.9193, 0.8840, 0.9231, 0.9327, 0.8810, 0.9236, 0.8925, 0.9237,\n",
+      "         0.9157, 0.9297],\n",
+      "        [0.9967, 0.9057, 0.8934, 0.9231, 0.9299, 0.8921, 0.8767, 0.9167, 0.9610,\n",
+      "         0.8802, 0.6826],\n",
+      "        [0.9981, 0.9294, 0.9241, 0.9163, 0.9702, 0.9292, 0.9695, 0.9197, 0.9576,\n",
+      "         0.9549, 0.9259],\n",
+      "        [0.9961, 0.9327, 0.8806, 0.8619, 0.9553, 0.9016, 0.9716, 0.9020, 0.9696,\n",
+      "         0.9691, 0.9420],\n",
+      "        [0.9983, 0.9163, 0.8930, 0.9078, 0.9724, 0.8658, 0.9604, 0.9150, 0.9754,\n",
+      "         0.9376, 0.9092],\n",
+      "        [0.9963, 0.8874, 0.8824, 0.8522, 0.7961, 0.8123, 0.6983, 0.8586, 0.9473,\n",
+      "         0.8876, 0.8099],\n",
+      "        [0.9824, 0.8759, 0.8291, 0.8176, 0.8381, 0.7966, 0.9392, 0.8723, 0.9539,\n",
+      "         0.9458, 0.8739],\n",
+      "        [0.9928, 0.8563, 0.8345, 0.8545, 0.9183, 0.8329, 0.9436, 0.8030, 0.9739,\n",
+      "         0.9665, 0.8934]]))\n"
      ]
     }
    ],
@@ -2184,8 +2238,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "acd2b866",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.52 +- 0.44\n",
+      "90.40 +- 2.16\n",
+      "87.42 +- 3.95\n",
+      "89.52 +- 3.87\n",
+      "93.33 +- 4.60\n",
+      "88.33 +- 3.69\n",
+      "93.14 +- 6.07\n",
+      "87.67 +- 4.17\n",
+      "90.00 +- 16.62\n",
+      "90.08 +- 18.86\n",
+      "86.05 +- 12.07\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(90.5671), 9.760522097349167)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc = list((dice_test.nanmean(dim=0) * 100, np.nanstd(dice_test.cpu().numpy(), axis=0) * 100))\n",
+    "\n",
+    "for mean, std in zip(*calc):\n",
+    "    print(f'{mean:.2f} +- {std:.2f}')\n",
+    "dice_test.nanmean() * 100, np.nanstd(dice_test.cpu().numpy()) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd111f71",
    "metadata": {},
    "outputs": [],
    "source": []
